Bug 38785 - EDITING flip preview does not refresh correctly with transparent or svg images
Summary: EDITING flip preview does not refresh correctly with transparent or svg images
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86 (IA32) All
: medium normal
Assignee: Cédric Bosdonnat
URL:
Whiteboard: target:3.7.0
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-29 14:58 UTC by noname
Modified: 2012-07-11 16:00 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
test file (19.53 KB, application/vnd.oasis.opendocument.text)
2011-06-29 14:58 UTC, noname
Details
The image is shown in non-flipped view and flipped view (35.39 KB, image/png)
2012-01-10 15:27 UTC, Rob Snelders
Details
Sample document fro preview problem (10.91 KB, application/3dr)
2012-07-11 15:29 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description noname 2011-06-29 14:58:41 UTC
Created attachment 48573 [details]
test file

0) Open attached file
1) Double click the image
2) Click the 'Picture' tab
3) Now check 'Horizontally' and/or 'Vertically'

You should now see the preview on the right isn't refreshed before flipped.

Preview is refreshed when window is closed/opened again. Or when you go to another window, like a browser and back.
Comment 1 Rainer Bielefeld Retired 2011-06-29 22:14:10 UTC
[Reproducible] with "LibreOffice 3.4.1RC1 – WIN7  Home Premium  (64bit) English UI [OOO340m1 (Build:103)]" for reporter's sample and my own documents. Works fine for .png

Other preview I tested (crop) works fine.

This dialog only exists in WRITER, other applications are not affected.

@Cédric
Please feel free to reassign if it’s not your area
Comment 2 Jeffrey 2011-06-29 23:22:02 UTC
On LibreOffice 3.4  340m1(Build:12) for OpenSuse for Linux, in the Pictures tab, I asked for it to be flipped horizontally/vertically. The preview updates, but there is a problem: the new "flipped" picture is superimposed on top of the old one. So the preview updates without erasing the old position of the picture.
Comment 3 Rainer Bielefeld Retired 2011-06-30 01:00:47 UTC
Yes, I forgot to mention: The new preview does not replace the old one, but it will be added.
Comment 4 Björn Michaelsen 2011-12-23 13:24:31 UTC
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.
Comment 5 Rob Snelders 2012-01-10 15:26:22 UTC
I have LOdev 3.5.0.beta2 on Ubuntu 10.04 (x86_64).

When I load a png-image and try to flip it the the problem also occurs.
The non-flipped image is still visible while the flipped one also shows up as shown in picture attachment
Comment 6 Rob Snelders 2012-01-10 15:27:19 UTC
Created attachment 55402 [details]
The image is shown in non-flipped view and flipped view
Comment 7 Rainer Bielefeld Retired 2012-07-10 17:26:40 UTC
Still [Reproducible] with parallel installation of Master "LOdev " 3.7.0.0.alpha0+   - WIN7 Home Premium (64bit) ENGLISH UI [Build ID: c3dc9a3]" (tinderbox: 2008R2@20, pull time 2012-07-05 08:52:02) and LibO 3.5.3 on Ubuntu 12 (VirtualBox). Preview keeps old preview and adds new one. Also reproducible with attachment 55405 [details] of Bug 44662.

I also see this bug with LibO 3.3.3 and OOo 3.2, so inherited from OOo!

AOOo Bug shows that the problem also appears with transparent gif pictures, and I am pretty sure that it appears with all pictures, but of course, with nontransparent pictures the problem is not visible

@Ivan:
Very old bug, can you assist?
Comment 8 Rainer Bielefeld Retired 2012-07-10 17:27:42 UTC
Forgot to mention: the problem even is visible with the dog preview placehoder for read error pictures.
Comment 9 Not Assigned 2012-07-11 13:45:55 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f6413c384f11cd7fb626163eec421aa40216ebab

fdo#38785: preview window should be paint transparent
Comment 10 Ivan Timofeev (retired) 2012-07-11 13:47:53 UTC
(In reply to comment #8)
> Forgot to mention: the problem even is visible with the dog preview placehoder
> for read error pictures.

How to reproduce?
Comment 11 Rainer Bielefeld Retired 2012-07-11 15:29:49 UTC
Created attachment 64115 [details]
Sample document fro preview problem

@Ivan:
I checked and found that the preview placeholder problem does no longer exist. Since 3.5 we have a "Mountain with lake and sun" oil on canvas picture, with this rectangular nontransparent picture no problem can happen.

If you open attached document with 3.4.5 (WIN) or older, you will see the missing linked "Pumuckl.gif" picture replaced by a black dog in Flip Dialog, and that dog also shows the problem that the old view is not wiped out before the flipped preview appears.
Comment 12 Ivan Timofeev (retired) 2012-07-11 16:00:56 UTC
Ah, thanks, I get it. Anyway, every image should get flipped without problems now.