fdo#38785: preview window should be paint transparent

Change-Id: Ie3bf92e8cad16af85f800d0e2a4c992312524a7f